Add svg dice images. Update victory sequence.

--- a/dicee.html
+++ b/dicee.html
@@ -3,23 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title>Dicee</title>
-    <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
-
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" />
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
 
     <div class="container">
       <h1>Roll The Dice!</h1>
       <div class="dice">
-<div class="die" id="die1">
+<div class="die" id="player1">
   <p>Player 1</p>
-  <img class="img1" src="images/dice1.png">
+  <i id="die1" class="img fa-solid fa-dice-one"></i>
 </div>
 
-<div class="die" id="die2">
+<div class="die" id="player2">
   <p>Player 2</p>
-  <img class="img2" src="images/dice2.png">
+  <i id="die2" class="img fa-solid fa-dice-two"></i>
 </div>
       </div>
       
