--- a/dicee.html
+++ b/dicee.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Dicee</title>
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" />
     <link rel="stylesheet" href="styles.css">
@@ -25,7 +24,7 @@
       </div>
       
 
-      <button class="roll-dice" id="roll-dice">Roll Dice</button>
+      <button class="roll-dice" id="roll-dice">Roll the Dice</button>
     </div>
 
   <script src="index.js" charset="utf-8"></script>
