--- a/dicee.html
+++ b/dicee.html
@@ -15,16 +15,17 @@
 <div class="die" id="player1">
   <p>Player 1</p>
   <i id="die1" class="img fa-solid fa-dice-one"></i>
+  <span id="p1-score">Score: 0</span>
 </div>
 
 <div class="die" id="player2">
   <p>Player 2</p>
   <i id="die2" class="img fa-solid fa-dice-two"></i>
+  <span id="p2-score">Score: 0</span>
 </div>
       </div>
-      
-
       <button class="roll-dice" id="roll-dice">Roll the Dice</button>
+      <h3>Hint: Tap the Dice for a quick roll!</h3>
     </div>
 
   <script src="index.js" charset="utf-8"></script>
