Quick Roll Bug Fixes.  Refinded rolling Interupts.

--- a/dicee.html
+++ b/dicee.html
@@ -11,7 +11,7 @@
 
     <div class="container">
       <h1>Roll The Dice!</h1>
-      <div class="dice">
+      <div class="dice" id="dice">
 <div class="die" id="player1">
   <p>Player 1</p>
   <i id="die1" class="img fa-solid fa-dice-one"></i>
@@ -24,7 +24,10 @@
   <span id="p2-score">Score: 0</span>
 </div>
       </div>
-      <button class="roll-dice" id="roll-dice">Roll the Dice</button>
+      <div class="buttons">
+          <button class="roll-dice" id="roll-dice">Roll the Dice</button>
+        <button class="reset" id="reset">Reset Game</button>
+      </div>
       <h3>Hint: Tap the Dice for a quick roll!</h3>
     </div>
 
