--- a/dicee.html
+++ b/dicee.html
@@ -15,13 +15,13 @@
 <div class="die" id="player1">
   <p>Player 1</p>
   <i id="die1" class="img fa-solid fa-dice-one"></i>
-  <span id="p1-score">Score: 0</span>
+  <span class="score" id="p1-score">Score: 0</span>
 </div>
 
 <div class="die" id="player2">
   <p>Player 2</p>
   <i id="die2" class="img fa-solid fa-dice-two"></i>
-  <span id="p2-score">Score: 0</span>
+  <span class="score" id="p2-score">Score: 0</span>
 </div>
       </div>
       <div class="buttons">
@@ -35,6 +35,6 @@
   </body>
 
   <footer>
-    🎲 Dicee Roll 🎲
+   <span> 🎲 Dicee Roll 🎲 <br> By Loren Couse </span>
   </footer>
 </html>
